--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>CONTACT</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href="http://fonts.googleapis.com/css?family=Codystar|Raleway+Dots" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Codystar|Raleway+Dots" rel="stylesheet">
 </head>
 <body>
 	<div>
