--- a/work.html
+++ b/work.html
@@ -6,23 +6,44 @@
 	<link href="https://fonts.googleapis.com/css?family=Codystar|Raleway+Dots" rel="stylesheet">
 </head>
 <body>
-<div>
-	<img class="logo" src="1.gif">
-</div>
+	<div>
+		<img class="logo" src="1.gif">
+	</div>
 	
 
 	<div class ="nav-container">
-	<nav>
-		<ul>
+		<nav>
+			<ul>
 			
-			<li> <a href="work.html"> WORK </a></li>
-			<li> <a href="about.html"> ABOUT </a></li>
-			<li> <a href="index.html"> CONTACT </a> </li>
-		</ul>
+				<li> <a href="work.html"> WORK </a></li>
+				<li> <a href="about.html"> ABOUT </a></li>
+				<li> <a href="index.html"> CONTACT </a> </li>
+			</ul>
 
-	</nav>
-</div>
+		</nav>
+	</div>
+	
+	<div class ="row">
+		<div class="column">
+			<div class="card">
+			</div>
+		</div>
 
+		<div class ="column">
+			<div class="card">
+			</div>
+		</div>
+
+		<div class ="column">
+			<div class ="card">
+			</div>
+		</div>
+
+		<div class ="column">
+			<div class = "card">
+			</div>
+		</div>
+	</div>
 
 </body>
 </html>
