--- a/work.html
+++ b/work.html
@@ -4,6 +4,7 @@
 	<title>WORK</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Codystar|Raleway+Dots" rel="stylesheet">
+
 </head>
 <body>
 	<div>
@@ -26,6 +27,9 @@
 	<div class ="row">
 		<div class="column">
 			<div class="card">
+			 <a href="file:///Users/mingma/Documents/GitHub/ohyeahmm.github.io/day1.html">
+			 	<div><img src ="image/moody.jpg" width="500" height="490"></div>
+
 			</div>
 		</div>
 
