--- a/work.html
+++ b/work.html
@@ -27,7 +27,7 @@
 	<div class ="row">
 		<div class="column">
 			<div class="card">
-			 <a href="file:///Users/mingma/Documents/GitHub/ohyeahmm.github.io/day1.html">
+			 <a href="day1.html">
 			 	<div><img src ="image/moody.jpg" width="500" height="490"></div>
 
 			</div>
