--- a/work.html
+++ b/work.html
@@ -28,7 +28,7 @@
 		<div class="column">
 			<div class="card">
 			 <a href="day1.html">
-			 	<div><img src ="image/moody.jpg" width="500" height="490"></div>
+			 	<img src ="image/moody.jpg" width="500" height="490">
 
 			</div>
 		</div>
