--- a/work.html
+++ b/work.html
@@ -34,7 +34,8 @@
 		</div>
 
 		<div class ="column">
-			<div class="card">
+			<a href="day2.html">
+				<img src ="image/day2.jpg" width="500" height="490">
 			</div>
 		</div>
 
