--- a/day2.html
+++ b/day2.html
@@ -26,8 +26,8 @@
 
  <p>this project was made by processing. </p>
  <p> during this project, I was looking to make a glow moving image</p>
- <p> the idea of this project is a plante like moving image</p>
- <p> it was very cool that I can make particles with code instead of using 3d mold software.</p>
+ <p> the idea of this project is a planet like moving image</p>
+ <p> it was very cool that I can make particles with code instead of using 3d software.</p>
 
 <div> <video width="620" height="550" controls> 
 		<source src="video/thesphere.mp4" type="video/mp4">
