--- a/day3.html
+++ b/day3.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>WORK</title>
+	<title>DAY3</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Codystar|Raleway+Dots" rel="stylesheet">
-
 </head>
 <body>
-	<div>
+<div>
 		<img class="logo" src="1.gif">
 	</div>
 	
-
 	<div class ="nav-container">
 		<nav>
 			<ul>
@@ -23,32 +21,5 @@
 
 		</nav>
 	</div>
-	
-	<div class ="row">
-		<div class="column">
-			
-			 <a href="day1.html">
-			 	<img src ="image/moody.jpg" width="500" height="490">
-
-			</div>
-		</div>
-
-		<div class ="column">
-			<a href="day2.html">
-				<img src ="image/day2.jpg" width="500" height="490">
-			</div>
-		</div>
-
-		<div class ="column">
-			<a href="day3.html">
-			</div>
-		</div>
-
-		<div class ="column">
-			<a href="day4.html">
-			</div>
-		</div>
-	</div>
-
 </body>
 </html>
