--- a/day3.html
+++ b/day3.html
@@ -21,5 +21,46 @@
 
 		</nav>
 	</div>
+
+	<h1>BLINK IN THE BOX</h1>
+	<p> This is a shadow boxThis that contains a memory of mine, which is an unforgettable summer night.</p>
+		<p>This is an art project I made a year ago, I always want to develop it to a higher place. </p>
+		
+	<p>The development of this project, I want to make those LEDs blink to remind of shining stars. </p>
+
+	<h2> old version of this box </h2>
+
+	<h3>front</h3>
+<div><img src="image/oldverison.jpg" width="600" height="470"></div>
+ <h3>back</h3>
+ <p>use coin battery to support the leds.</p>
+<div><img src="image/back.jpg" width="600" height="470"></div>
+<h3>what's inside this shadow box.</h3>
+<div><img src="image/inside.jpg" width="600" height="470"></div>
+<p>put leds under the background, connect with contactive string,which is easier to hide. </p>
+<div><img src="image/insideleds.jpg" width="600" height="470"></div>
+<h3>work like this</h3>
+<div><img src="image/light.jpg" width="400" height="670"></div>
+<h3>connect with lilypad</h3>
+<div><img src="image/lilypad.jpg" width="360" height="670"></div>
+<h3>code with arduino</h3>
+<div><img src="image/workwith.jpg" width="500" height="570"></div>
+
+
+<h3>test with led</h3>
+	<div> <video width="300" height="550" controls> 
+		<source src="video/testlights.mp4" type="video/mp4">
+		<source src="video/testlights.ogg" type="video/ogg">
+			Your browser does not support the video tag.
+		</video>
+
+<h3>shine like an star</h3>
+<div> <video width="620" height="400" controls> 
+		<source src="video/stars.mp4" type="video/mp4">
+		<source src="video/stars.ogg" type="video/ogg">
+			Your browser does not support the video tag.
+		</video>
+
+	
 </body>
 </html>
