--- a/work.html
+++ b/work.html
@@ -41,6 +41,7 @@
 
 		<div class ="column">
 			<a href="day3.html">
+				<img src ="image/shadowbox.jpg" width="500" height="490">
 			</div>
 		</div>
 
