--- a/work.html
+++ b/work.html
@@ -47,6 +47,7 @@
 
 		<div class ="column">
 			<a href="day4.html">
+				<img src ="image/arhorse.jpg" width="500" height="490">
 			</div>
 		</div>
 	</div>
