--- a/work.html
+++ b/work.html
@@ -50,6 +50,13 @@
 				<img src ="image/arhorse.jpg" width="500" height="490">
 			</div>
 		</div>
+
+		<div class = "column">
+			<a href="day5.html">
+				<img src ="image/day5.jpg" width="500" height="490">
+				
+			
+		</div>
 	</div>
 
 </body>
