--- a/day1.html
+++ b/day1.html
@@ -30,11 +30,11 @@
 
 	<p> Start with sketch on woodborad </p>
 
-	<div> <img src="image/draft.jpg" width="500" height="370"></div>
+	<div> <IMG class="displayed" src="image/draft.jpg" width="500" height="370"></div>
 
 	<h2> Color it </h2>
 
-	<div><img src="image/drawing.jpg" width="500" height="370"></div>
+	<div><IMG class="displayed" src="image/drawing.jpg" width="500" height="370"></div>
 
 	<h2> Characters </h2>
 
@@ -42,43 +42,46 @@
 
 	<h3> Little Moody Man  </h3>
 
-	<div><img src="image/moodyman.jpg" width="500" height="350"></div>
+	<div><IMG class="displayed" src="image/moodyman.jpg" width="500" height="350"></div>
 
 
-	<div><img src="image/moody.jpg" width="500" height="450"></div>
+	<div><IMG class="displayed" src="image/moody.jpg" width="500" height="450"></div>
 
 	<h3> Flower Girl </h3> 
 
-	<div><img src="image/flower1.jpg" width="500" height="350"></div>
+	<div><IMG class="displayed" src="image/flower1.jpg" width="500" height="350"></div>
 
-	<div><img src="image/flower.jpg" width="500" height="400"></div>
+	<div><IMG class="displayed" src="image/flower.jpg" width="500" height="400"></div>
 
 	<h3> Cloud </h3>
 
-	<div><img src="image/cloud.jpg" width="500" height="360"></div>
+	<div><IMG class="displayed" src="image/cloud.jpg" width="500" height="360"></div>
 
 	<h2> Import them into unity </h2>
 
-	<div><img src="image/unity.jpg" width="500" height="370"></div>
+	<div><IMG class="displayed" src="image/unity.jpg" width="500" height="370"></div>
 
 	<h2> Test Test</h2>
+ 
 
-	<div> <video width="350" height="550" controls> 
-		<source src="video/test.mp4" type="video/mp4">
-		<source src="video/test.ogg" type="video/ogg">
+	<div> <video class="center" width="350" height="550" controls> 
+		<source  src="video/test.mp4" type="video/mp4">
+		<source  src="video/test.ogg" type="video/ogg">
 			Your browser does not support the video tag.
 		</video>
 	</div>
+
 
 	<h2> Put it into my phone</h2>
 	<p> work with Vuforia and Xcode</p>
 
-	<div> <video width="350" height="550" controls>
-	<source src="video/app.mp4" type="video/mp4">
-		<source src="video/app.ogg" type="video/ogg">
+
+	<div> <video class="center" width="350" height="550" controls>
+	<source  src="video/app.mp4" type="video/mp4">
+		<source  src="video/app.ogg" type="video/ogg">
 			Your browser does not support the video tag.
 		</video>
-	</div>
+
 
 
 </body>
