--- a/day2.html
+++ b/day2.html
@@ -29,16 +29,16 @@
  <p> the idea of this project is a planet like moving image</p>
  <p> it was very cool that I can make particles with code instead of using 3d software.</p>
 
-<div> <video width="620" height="550" controls> 
+<div> <video class="center" width="620" height="550" controls> 
 		<source src="video/thesphere.mp4" type="video/mp4">
 		<source src="video/thesphere.ogg" type="video/ogg">
 			Your browser does not support the video tag.
 		</video>
 
 <h3> Code</h3>
-<div><img src="image/code1.jpg" width="700" height="770"></div>
+<div><IMG class="displayed" src="image/code1.jpg" width="700" height="770"></div>
 
-<div><img src="image/code.jpg" width="700" height="770"></div>
+<div><IMG class="displayed" src="image/code.jpg" width="700" height="770"></div>
 
 
 </body>
