--- a/day3.html
+++ b/day3.html
@@ -31,36 +31,37 @@
 	<h2> old version of this box </h2>
 
 	<h3>front</h3>
-<div><img src="image/oldverison.jpg" width="600" height="470"></div>
+<div><IMG class="displayed" src="image/oldverison.jpg" width="600" height="470"></div>
  <h3>back</h3>
  <p>use coin battery to support the leds.</p>
-<div><img src="image/back.jpg" width="600" height="470"></div>
+<div><IMG class="displayed" src="image/back.jpg" width="600" height="470"></div>
 <h3>what's inside this shadow box.</h3>
-<div><img src="image/inside.jpg" width="600" height="470"></div>
+<div><IMG class="displayed" src="image/inside.jpg" width="600" height="470"></div>
 <p>put leds under the background, connect with contactive string,which is easier to hide. </p>
-<div><img src="image/insideleds.jpg" width="600" height="470"></div>
+<div><IMG class="displayed" src="image/insideleds.jpg" width="600" height="470"></div>
 <h3>work like this</h3>
-<div><img src="image/light.jpg" width="400" height="670"></div>
+<div><IMG class="displayed" src="image/light.jpg" width="400" height="670"></div>
 <h3>connect with lilypad</h3>
-<div><img src="image/lilypad.jpg" width="360" height="670"></div>
+<div><IMG class="displayed" src="image/lilypad.jpg" width="360" height="670"></div>
 <h3>code with arduino</h3>
-<div><img src="image/workwith.jpg" width="500" height="570"></div>
+<div><IMG class="displayed" src="image/workwith.jpg" width="500" height="570"></div>
 
 
 <h3>test with led</h3>
-	<div> <video width="300" height="550" controls> 
-		<source src="video/testlights.mp4" type="video/mp4">
-		<source src="video/testlights.ogg" type="video/ogg">
+
+<div><video class="center" width="300" height="550" controls>
+	<source src="video/lights.mp4" type="video/mp4">
+	<source src="video/lights.ogg" type="video/ogg">
 			Your browser does not support the video tag.
-		</video>
+</video>
+
+ 
 
 <h3>shine like an star</h3>
-<div> <video width="620" height="400" controls> 
+
+<div> <video class="center" width="620" height="400" controls> 
 		<source src="video/stars.mp4" type="video/mp4">
 		<source src="video/stars.ogg" type="video/ogg">
 			Your browser does not support the video tag.
 		</video>
 
-	
-</body>
-</html>
