--- a/day4.html
+++ b/day4.html
@@ -28,24 +28,24 @@
 
 <h2>made in unity</h2>
 
-<div><img src="image/arhourse.jpg" width="600" height="500"></div>
+<div><IMG class="displayed" src="image/arhourse.jpg" width="600" height="500"></div>
 
 <h2>code for horse control</h2>
 
-<div><img src="image/hoursecontroller.jpg" width="500" height="600"></div>
+<div><IMG class="displayed" src="image/hoursecontroller.jpg" width="500" height="600"></div>
 
 <h2>code for mobile control</h2>
 
-<div><img src="image/moblie.jpg" width="500" height="600"></div>
+<div><IMG class="displayed" src="image/moblie.jpg" width="500" height="600"></div>
 
-<div><img src="image/mobole1.jpg" width="500" height="600"></div>
+<div><IMG class="displayed" src="image/mobole1.jpg" width="500" height="600"></div>
 
 <h2>final result</h2>
 
-<div> <video width="500" height="350" controls>
+<div> <video class="center" width="500" height="350" controls>
 	<source src="video/hose.mp4" type="video/mp4">
 		<source src="video/hose.ogg" type="video/ogg">
 			Your browser does not support the video tag.
 		</video>
-	</div>
+	
 
