--- a/day5.html
+++ b/day5.html
@@ -30,7 +30,7 @@
 
      <h2> first i made a very basic filter</h2>
 
-     <div> <video width="500" height="500" controls>
+     <div> <video class="center" width="500" height="500" controls>
 	<source src="video/webcam.mp4" type="video/mp4">
 		<source src="video/webcam.ogg" type="video/ogg">
 			Your browser does not support the video tag.
@@ -40,12 +40,12 @@
 	<h2>then I added some particles on it</h2>
 	<p>I failed...</p>
 
-     <div><img src="image/fail.jpg" width="600" height="500"></div>
-     <div><img src="image/fail2.jpg" width="600" height="500"></div>
-      <div><img src="image/fail3.jpg" width="600" height="500"></div>
+     <div><IMG class="displayed" src="image/fail.jpg" width="600" height="500"></div>
+     <div><IMG class="displayed" src="image/fail2.jpg" width="600" height="500"></div>
+      <div><IMG class="displayed" src="image/fail3.jpg" width="600" height="500"></div>
 
       <h2>some code..</h2>
 
-       <div><img src="image/webcode.jpg" width="400" height="500"></div>
-       <div><img src="image/webcode1.jpg" width="400" height="500"></div>
-       <div><img src="image/webcode2.jpg" width="400" height="500"></div>
+       <div><IMG class="displayed" src="image/webcode.jpg" width="400" height="500"></div>
+       <div><IMG class="displayed" src="image/webcode1.jpg" width="400" height="500"></div>
+       <div><IMG class="displayed"src="image/webcode2.jpg" width="400" height="500"></div>
