--- a/work.html
+++ b/work.html
@@ -28,35 +28,39 @@
 		<div class="column">
 			
 			 <a href="day1.html">
-			 	<img src ="image/moody.jpg" width="500" height="490">
+			 	<IMG class="displayed" src ="image/moody.jpg" width="500" height="500">
 
 			</div>
-		</div>
+		
 
 		<div class ="column">
 			<a href="day2.html">
-				<img src ="image/day2.jpg" width="500" height="490">
+				<IMG class="displayed" src ="image/day2.jpg" width="500" height="500">
 			</div>
-		</div>
+		
 
 		<div class ="column">
 			<a href="day3.html">
-				<img src ="image/shadowbox.jpg" width="500" height="490">
+				<IMG class="displayed" src ="image/shadowbox.jpg" width="500" height="500">
 			</div>
-		</div>
+		
 
 		<div class ="column">
 			<a href="day4.html">
-				<img src ="image/arhorse.jpg" width="500" height="490">
+				<IMG class="displayed" src ="image/arhorse.jpg" width="500" height="500">
 			</div>
-		</div>
+		
 
 		<div class = "column">
 			<a href="day5.html">
-				<img src ="image/day5.jpg" width="500" height="490">
-				
-			
+				<IMG class="displayed" src ="image/day5.jpg" width="500" height="500">	
 		</div>
+
+		<div class ="column">
+			<a href ="1D.html">
+				<IMG class="displayed" src ="image/1d.jpg" width="500" height="500">
+			</div>
+
 	</div>
 
 </body>
