--- a/work.html
+++ b/work.html
@@ -61,6 +61,10 @@
 				<IMG class="displayed" src ="image/1d.jpg" width="500" height="500">
 			</div>
 
+		<div class ="column">
+			<a href ="critiqueinterface.html">
+			<IMG class="displayed" src ="image/critique.jpg" width="500" heigh="500">
+
 	</div>
 
 </body>
