--- a/work.html
+++ b/work.html
@@ -66,6 +66,16 @@
 			<IMG class="displayed" src ="image/critique.jpg" width="500" heigh="500">
 
 	</div>
+		<div class ="column">
+			<a href ="2D.html">
+				<IMG class="displayed" src ="image/2d.jpg" width="500" height="500">
+			</div>
+
+		<div class ="column">
+			<a href ="3D.html">
+			<IMG class="displayed" src ="image/3d.jpg" width="500" heigh="500">
+
+	</div>
 
 </body>
 </html>
