--- a/3D.html
+++ b/3D.html
@@ -54,6 +54,7 @@ I want to create an environment to make people stay with themselves and to aware
 If there is no choice, it will only obey the instructions of consciousness faithfully. 
 Therefore, control your own consciousness and carefully choose ideas and 
 concepts at the level of consciousness.</p>
+<p class="blocktext"> To see themselves in the environment to ba particles and can be changed</p>
 <div> <IMG class="displayed" src="image/white.jpg" width="30" height="100"></div>
 
 <div><IMG class="displayed" src="image/3d_1.jpg" width="600" height="400"></div>
