--- a/work.html
+++ b/work.html
@@ -73,9 +73,19 @@
 
 		<div class ="column">
 			<a href ="3D.html">
-			<IMG class="displayed" src ="image/3d.jpg" width="500" heigh="500">
+			<IMG class="displayed" src ="image/3d.jpg" width="500" height="500">
 
 	</div>
+
+	<div class ="column">
+		<a href ="4D.html">
+			<IMG class = "displayed" src = "image/4d.jpg" width ="500" height="500">
+		</div>
+
+	<div class = "column">
+		<a href="5D.html">
+			<IMG class ="displayed" src ="image/5d.jpg" width="500" height="500">
+		</div>
 
 </body>
 </html>
