--- a/work.html
+++ b/work.html
@@ -87,5 +87,9 @@
 			<IMG class ="displayed" src ="image/5d.jpg" width="500" height="500">
 		</div>
 
+    <div class="column">
+    	<a href ="finalstatement.html">
+    	<IMG class="displayed" src="image/finalstatement.jpg" width="500" height="500"></div>
+
 </body>
 </html>
